feedback fix imgae space sda KJCHSDKN dvsdvs

--- a/contact.html
+++ b/contact.html
@@ -87,12 +87,12 @@
                         <a href="/" class="logo"><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
-                        <span class="activee"><a class="fontLatoRegular" href="/who-we-are">Who we are?</a></span>
+                        <span class="activee"><a class="fontLatoRegular" href="/who-we-are">Who we are</a></span>
                         <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
                         <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
                         <span><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
                         <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
-                        <span><a class="fontLatoRegular" href="/">Contact</a></span>
+                        <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
                         <button class="btn btn-outline-primary fontLatoBlack"onclick="window.location.href = './contact'" >TALK TO US</button>
@@ -156,122 +156,143 @@
 	<!-- </iframe> -->
 
     <!-- main footer -->
-    <section class="footer" style="border-top: 1px solid rgba(25, 34, 79, 0.08);">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
-                    <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
-                    <p class="fontGraphikRegular">© Crayon Digital Reach Pvt. Ltd.</p>
-                    <p class="fontGraphikRegular">All rights reserved</p>
-                </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <a href="/who-we-are"  alt="Company" style="color: unset;">
-                        <span class="fontLatoBold footer_menu">
-                            who we are?
-                        </span>
-                    </a>
-                    <!-- <ul>
-                        <li><span class="fontLatoRegular">Who we are?</span></li>
-                        <li><span class="fontLatoRegular">Pricing</span></li>
-                        <li><span class="fontLatoRegular">Careers</span></li>
-                        <li><span class="fontLatoRegular">Contact</span></li>
-                    </ul> -->
-                </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <a href="/opportunities"  alt="Company" style="color: unset;">
-                     <span class="fontLatoBold  footer_menu">
-                        Opportunities
-                     </span>
-                    </a>
-                    <!-- <ul>
-                        <li><span class="fontLatoRegular">Entrepreneur</span></li>
-                        <li><span class="fontLatoRegular">Startup Owner</span></li>
-                        <li><span class="fontLatoRegular">Enterprise</span></li>
-                        <li><span class="fontLatoRegular">SaaS</span></li>
-                    </ul> -->
-                </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <a href="https://medium.com/crayond" target="_blank"  alt="blog" style="color: unset;">
-                     <span class="fontLatoBold footer_menu">
-                        Blog
-                     </span>
-                     </a>
-                    <!-- <ul>
-                        <li><span class="fontLatoRegular">Blog</span></li>
-                        <li><span class="fontLatoRegular">Case Studies</span></li>
-                        <li><span class="fontLatoRegular">FAQ</span></li>
-                    </ul> -->
-                </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <a href="/contact"  alt="Company" style="color: unset;">
-                     <span class="fontLatoBold footer_menu">
-                        Contact
-                    </span>
-                    </a>
-                    <!-- <ul>
-                        <li><span class="fontLatoRegular">User Story Writer</span></li>
-                        <li><span class="fontLatoRegular">Mapper</span></li>
-                        <li><span class="fontLatoRegular">Builder</span></li>
-                    </ul> -->
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- end -->
-    <!-- footer_social_media -->
-    <section class="footer_social_media">
-        <footer>
+    <section class="footer">
             <div class="container">
                 <div class="row">
-                    <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 tp" style="display: flex;">
-                        <p class="fontLatoBold footer_list"><span>Security</span></p>
-                        <p class="fontLatoBold footer_list"><span>Terms & Policies</span></p>
-                        <p class="fontLatoBold footer_list"><span>GDPR</span></p>
-                    </div> -->
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link"
-                        style="display: flex;justify-content: flex-start;">
-                        <samp class="social_icon">
-                            <i class="fa fa-linkedin " aria-hidden="true"></i>
-                        </samp>
-                        <samp class="social_icon">
-                            <i class="fa fa-facebook " aria-hidden="true"></i>
-                        </samp>
-                        <samp class="social_icon">
-                            <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
-                        </samp>
-                        <samp class="social_icon">
-                            <i class="fa fa-twitter " aria-hidden="true"></i>
-                        </samp>
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
+                        <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
+                        <p class="fontGraphikRegular">© Crayond Digital Pvt. Ltd.</p>
+                        <p class="fontGraphikRegular">All rights reserved</p>
                     </div>
-                    <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
-                        <p class="fontGraphikRegular">hello@crayond.com</p>
+                    <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+                        <a href="/who-we-are.html"  alt="Company" style="color: unset;">
+                            <span class="fontLatoBold footer_menu">
+                                    Who we are
+                            </span>
+                        </a>
+                        <!-- <ul>
+                            <li><span class="fontLatoRegular">Who we are?</span></li>
+                            <li><span class="fontLatoRegular">Pricing</span></li>
+                            <li><span class="fontLatoRegular">Careers</span></li>
+                            <li><span class="fontLatoRegular">Contact</span></li>
+                        </ul> -->
                     </div>
-                    <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
-                            <p class="fontGraphikRegular">+(91) 74483 90100</p>
+                    <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+                        <a href="/opportunities"  alt="Opportunities" style="color: unset;">
+                         <span class="fontLatoBold  footer_menu">
+                                Opportunities
+                         </span>
+                        </a>
+                        <!-- <ul>
+                            <li><span class="fontLatoRegular">Entrepreneur</span></li>
+                            <li><span class="fontLatoRegular">Startup Owner</span></li>
+                            <li><span class="fontLatoRegular">Enterprise</span></li>
+                            <li><span class="fontLatoRegular">SaaS</span></li>
+                        </ul> -->
                     </div>
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
-                            <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
+                    <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+                        <a href="https://medium.com/crayond" target="_blank" alt="Blogs" style="color: unset;">
+                         <span class="fontLatoBold footer_menu">
+                            Blog
+                         </span>
+                         </a>
+                        <!-- <ul>
+                            <li><span class="fontLatoRegular">Blog</span></li>
+                            <li><span class="fontLatoRegular">Case Studies</span></li>
+                            <li><span class="fontLatoRegular">FAQ</span></li>
+                        </ul> -->
                     </div>
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
-                        style="display: flex;justify-content: flex-start; display: none;">
-                        <samp class="social_icon">
-                            <i class="fa fa-linkedin " aria-hidden="true"></i>
-                        </samp>
-                        <samp class="social_icon">
-                            <i class="fa fa-facebook " aria-hidden="true"></i>
-                        </samp>
-                        <samp class="social_icon">
-                            <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
-                        </samp>
-                        <samp class="social_icon">
-                            <i class="fa fa-twitter " aria-hidden="true"></i>
-                        </samp>
+                    <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
+                        <a href="/contact"  alt="contact" style="color: unset;">
+                         <span class="fontLatoBold footer_menu">
+                                Contact
+                        </span>
+                        </a>
+                        <!-- <ul>
+                            <li><span class="fontLatoRegular">User Story Writer</span></li>
+                            <li><span class="fontLatoRegular">Mapper</span></li>
+                            <li><span class="fontLatoRegular">Builder</span></li>
+                        </ul> -->
                     </div>
-
                 </div>
             </div>
-        </footer>
-    </section>
+        </section>
+        <!-- end -->
+        <!-- footer_social_media -->
+        <section class="footer_social_media">
+            <footer>
+                <div class="container">
+                    <div class="row">
+                        <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 tp" style="display: flex;">
+                            <p class="fontLatoBold footer_list"><span>Security</span></p>
+                            <p class="fontLatoBold footer_list"><span>Terms & Policies</span></p>
+                            <p class="fontLatoBold footer_list"><span>GDPR</span></p>
+                        </div> -->
+                        <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link"
+                            style="display: flex;justify-content: flex-start;">
+                            <samp class="social_icon">
+                                <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="margin: auto;">
+                                <i class="fa fa-linkedin " aria-hidden="true"></i>
+                                </a>
+                            </samp>
+                            <samp class="social_icon">
+                                <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="margin: auto;">
+                                <i class="fa fa-facebook " aria-hidden="true"></i>
+                                </a>
+                            </samp>
+                            <samp class="social_icon">
+                                    <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="margin: auto;">
+                                <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                                </a>
+                            </samp>
+                            <samp class="social_icon">
+                                    <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="margin: auto;">
+                                <i class="fa fa-twitter " aria-hidden="true"></i>
+                                    </a>
+                            </samp>
+                        </div>
+                        <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
+                            <a href="mailto:hello@crayond.com?Subject=Hello%20again" target="_top" style="color: #000;">
+                                <p class="fontGraphikRegular" style="cursor: pointer;">hello@crayond.com</p>
+                            </a>
+                        </div>
+                        <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
+                            <a href="https://wa.me/+917448390100" style="color: #000;" target="__blank">
+                                <p class="fontGraphikRegular" style="cursor: pointer;" >+(91) 74483 90100</p>
+                            </a>
+                        </div>
+                        <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
+                                <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;text-align: left;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
+                        </div>
+                        <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
+                            style="display: flex;justify-content: flex-start; display: none;">
+                            <samp class="social_icon">
+                               <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="margin: auto;">
+                                <i class="fa fa-linkedin " aria-hidden="true"></i>
+                                </a>
+                            </samp>
+                            <samp class="social_icon">
+                                <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="margin: auto;">
+                                <i class="fa fa-facebook " aria-hidden="true"></i>
+                                </a>
+                            </samp>
+                            <samp class="social_icon">
+                                <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="margin: auto;">
+                                    <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                                </a>
+                            </samp>
+                            <samp class="social_icon">
+                                <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="margin: auto;">
+                                <i class="fa fa-twitter " aria-hidden="true"></i>
+                                </a>
+                            </samp>
+                        </div>
+    
+                    </div>
+                </div>
+            </footer>
+        </section>
+        <!-- end -->
     <!-- end -->
 </body>
 <script src="./plugin/jquery.min.js"></script>
