--- a/opportunities.html
+++ b/opportunities.html
@@ -74,9 +74,9 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5454VZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   
-  <section id="pre-loader">
+  <!-- <section id="pre-loader">
     <img src="./images/Crayon'd-New-Website-Loader.gif" alt="Crayon'd" srcset="./images/Crayon'd-New-Website-Loader.gif">
-  </section>  
+  </section>   -->
   <!-- Main header -->
   <div class="header" id="navBar">
       <div class="container">
@@ -88,12 +88,12 @@
                       </a>
                   </div>
                   <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
-                      <span class=""><a class="fontLatoRegular" href="/who-we-are">Who we are?</a></span>
+                      <span class=""><a class="fontLatoRegular" href="/who-we-are">Who we are</a></span>
                       <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
                       <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
                       <span class="active"><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
-                      <span><a class="fontLatoRegular" href="/">Blogs</a></span>
-                      <span><a class="fontLatoRegular" href="/">Contact</a></span>
+                      <span><a class="fontLatoRegular" href="https://medium.com/crayond" target="_blank">Blog</a></span>
+                      <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
                   </div>
                   <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
                       <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'">TALK TO US</button>
@@ -118,7 +118,7 @@
           </li>
           <li class="menu-item active"><a href="./opportunities">Opportunities</a>
           </li>
-          <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blogs</a>
+          <li class="menu-item"><a href="https://medium.com/crayond" target="_blank">Blog</a>
           </li>
           <li class="menu-item"><a href="./contact">Contact</a>
           </li>
@@ -568,10 +568,10 @@
           <div class="row">
               <div class="col-12 col-xs-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 logo_address">
                   <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
-                  <p class="fontGraphikRegular">© Crayon Digital Reach Pvt. Ltd.</p>
+                  <p class="fontGraphikRegular">© Crayond Digital Pvt. Ltd.</p>
                   <p class="fontGraphikRegular">All rights reserved</p>
               </div>
-              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                   <a href="/who-we-are"  alt="Company" style="color: unset;">
                       <span class="fontLatoBold footer_menu">
                           Who we are
@@ -584,7 +584,7 @@
                       <li><span class="fontLatoRegular">Contact</span></li>
                   </ul> -->
               </div>
-              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                   <a href="/opportunities"  alt="Company" style="color: unset;">
                    <span class="fontLatoBold  footer_menu">
                       Opportunities
@@ -597,10 +597,10 @@
                       <li><span class="fontLatoRegular">SaaS</span></li>
                   </ul> -->
               </div>
-              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                   <a href="https://medium.com/crayond"  alt="Blogs" target="_blank" style="color: unset;">
                    <span class="fontLatoBold footer_menu">
-                      Blogs
+                      Blog
                    </span>
                    </a>
                   <!-- <ul>
@@ -609,7 +609,7 @@
                       <li><span class="fontLatoRegular">FAQ</span></li>
                   </ul> -->
               </div>
-              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+              <div class="col-6 col-sm-2 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                   <a href="/contact"  alt="Company" style="color: unset;">
                    <span class="fontLatoBold footer_menu">
                       Contact
@@ -638,16 +638,24 @@
                   <div class="col-12 col-xs-12 col-sm-4 col-md-4 col-lg-4 col-xl-4 social_icon_link"
                       style="display: flex;justify-content: flex-start;">
                       <samp class="social_icon">
+                          <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="margin: auto;">
                           <i class="fa fa-linkedin " aria-hidden="true"></i>
+                          </a>
                       </samp>
                       <samp class="social_icon">
+                          <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="margin: auto;">
                           <i class="fa fa-facebook " aria-hidden="true"></i>
+                          </a>
                       </samp>
                       <samp class="social_icon">
+                          <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="margin: auto;">
                           <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                          </a>
                       </samp>
                       <samp class="social_icon">
+                          <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="margin: auto;">
                           <i class="fa fa-twitter " aria-hidden="true"></i>
+                          </a>
                       </samp>
                   </div>
                   <div class="col-12 col-xs-12 col-sm-4 col-md-4 col-lg-2 col-xl-2 footer_address">
@@ -657,7 +665,7 @@
                           <p class="fontGraphikRegular">+(91) 74483 90100</p>
                   </div>
                   <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
-                          <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
+                          <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;text-align: left;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
                   </div>
                   <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
                       style="display: flex;justify-content: flex-start; display: none;">
