--- a/who-we-are.html
+++ b/who-we-are.html
@@ -84,7 +84,7 @@
                         <a href="/" class="logo"><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
-                        <span class="active"><a class="fontLatoRegular" href="/who-we-are">Who we are?</a></span>
+                        <span class="active"><a class="fontLatoRegular" href="/who-we-are">Who we are</a></span>
                         <!-- <span><a class="fontLatoRegular" href="/">Products</a></span> -->
                         <!-- <span><a class="fontLatoRegular" href="/">Pricing</a></span> -->
                         <span><a class="fontLatoRegular" href="/opportunities">Opportunities</a> </span>
@@ -135,31 +135,34 @@
 
     <!-- end -->
     <!-- background video -->
-    <section class="first_section video_player" >
+    <!-- <section class="first_section video_player" >
         <div class="container-fluid" style="padding: 0px;">
             <video loop="loop" muted="muted" autoplay="autoplay" style="top: 0;position: absolute;" >
-                <!-- <source src="./images/demonstration.mp4" type="video/mp4"> -->
                 <source src="https://www.crayond.com/images/demonstration.mp4" type="video/mp4"/>
             </video>
         </div>
-    </section>
+    </section> -->
     <!-- end -->
     <!-- main title -->
-    <section class="title_section">
+    <!-- <section class="title_section">
         <div class="container" >
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 who_you_are_title fontGraphikBold">
-                <p style="margin-bottom: 0;color: white;text-shadow: 2px 2px 5px #00000078;">It’s libero tempore,<br/> cum soluta.</p>
+                <p style="margin-bottom: 0;color: white;text-shadow: 2px 2px 5px #00000078;">Our Story</p>
             </div>
         </div>
-    </section>
+    </section> -->
+    
     <!-- end -->
     <div style="background-color: white;">
     <!-- our_vision_mission -->
     <section class="our_vis_mis">
+        <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 who_you_are_title_sort fontGraphikBold">
+            <p style="margin-bottom: 0;color: white;text-shadow: 2px 2px 5px #00000078;">Our Story</p>
+        </div>
         <div class="container">
-            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 mobile_title fontGraphikBold" style="display: none;">
+            <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 mobile_title fontGraphikBold" style="display: none;">
                 <p >It’s libero tempore, cum soluta.</p>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 vission">
                     <div class="card">
@@ -167,7 +170,7 @@
                         <div class="card_body">
                             <h1 class="fontGraphikSemibold">Our Vision</h1>
                             <p>
-                                To be renowned as a brand that constantly innovates, strives for excellence, transforms people into influential leaders, makes customers fall in love, inspires a generation to come and innovate in this competitive world of commerce.
+                                    To be a brand that acts as a catalyst for change and inspires generations to come through constant innovation and revolutionary product creations
                             </p>
                         </div>
                         <img data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500" src="./images/oval-copy.svg" alt="vision" style="position: absolute;bottom: 70px;"/>
@@ -181,7 +184,7 @@
                       <div class="card_body">
                          <h1 class="fontGraphikSemibold">Our Mission</h1>
                            <p>
-                              We understand that it's an incredibly large mission that our team of young minds is committed to succeed in. Crayon'd has enjoyed helping startup founders to take their dream one step closer by building a winning product in the marketplace.
+                                To solve worthy problems through design and engineering for consumers and enterprises to make the world a better place.
                            </p>
                       </div>
                      </div>
@@ -355,37 +358,38 @@
     
     <!-- next_billion -->
     <section class="next_billion">
-        <img alt="oval" src="./images/oval.png" class="ovel" />
-        <img data-aos="zoom-out-down" data-aos-duration="5000" alt="oval-copy" src="./images/oval-copy-6.png" class="ovel-6" />
-        <div class="container billion">
-            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
-                <button class="button fontLatoRegular">Join our Team &nbsp <span> </span></button>
+            <img alt="oval" src="./images/oval.png" class="ovel" />
+            <img data-aos="zoom-out-down" data-aos-duration="5000" alt="oval-copy" src="./images/oval-copy-6.png" class="ovel-6" />
+            <div class="container billion">
+                <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
+                    <!-- <button class="button fontLatoRegular">Let's get serious &nbsp <span> </span></button> -->
+                    <img src="./images/confetti (1).svg" alt="confetti" />
+                </div>
+                <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
+                    <h1 class="fontGraphikSemibold">What’s your next billion-<br />dollar idea?</h1>
+                </div>
+                <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
+                    <button class="banner_button fontLatoBlack" onclick="window.location.href = './contact'">
+                        <span> 
+                                TALK TO US &nbsp
+                                <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        </span></button>
+                </div>
             </div>
-            <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
-                <h1 class="fontGraphikSemibold">Interested in joining our <br/>team?</h1>
-            </div>
-            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
-                <button class="banner_button fontLatoBlack">
-                    <span> 
-                            JOIN NOW &nbsp
-                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                    </span></button>
-            </div>
-        </div>
-        <img data-aos="zoom-in-up" data-aos-duration="5000" alt="path-3-copy" src="./images/path-3-copy.png" class="path-3" />
-        <img data-aos="zoom-in" data-aos-duration="3000" alt="path-3" src="./images/path-3.png" class="path" />
-    </section>
-    <!-- end -->
+            <img data-aos="zoom-in-up" data-aos-duration="5000" alt="path-3-copy" src="./images/path-3-copy.png" class="path-3" />
+            <img data-aos="zoom-in" data-aos-duration="3000" alt="path-3" src="./images/path-3.png" class="path" />
+        </section>
+        <!-- end -->
     <!-- main footer -->
     <section class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
                     <img alt="crayond@2x" src="./images/logo-crayond@2x.jpg" width="115px" />
-                    <p class="fontGraphikRegular">© Crayon Digital Reach Pvt. Ltd.</p>
+                    <p class="fontGraphikRegular">© Crayond Digital Pvt. Ltd.</p>
                     <p class="fontGraphikRegular">All rights reserved</p>
                 </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                     <a href="/who-we-are.html"  alt="Company" style="color: unset;">
                         <span class="fontLatoBold footer_menu">
                                 Who we are
@@ -398,7 +402,7 @@
                         <li><span class="fontLatoRegular">Contact</span></li>
                     </ul> -->
                 </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                     <a href="/opportunities"  alt="Opportunities" style="color: unset;">
                      <span class="fontLatoBold  footer_menu">
                             Opportunities
@@ -411,7 +415,7 @@
                         <li><span class="fontLatoRegular">SaaS</span></li>
                     </ul> -->
                 </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                     <a href="https://medium.com/crayond" target="_blank" alt="Blogs" style="color: unset;">
                      <span class="fontLatoBold footer_menu">
                         Blog
@@ -423,7 +427,7 @@
                         <li><span class="fontLatoRegular">FAQ</span></li>
                     </ul> -->
                 </div>
-                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
+                <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2 menu_list" style="margin: auto;">
                     <a href="/contact"  alt="contact" style="color: unset;">
                      <span class="fontLatoBold footer_menu">
                             Contact
@@ -452,40 +456,60 @@
                     <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link"
                         style="display: flex;justify-content: flex-start;">
                         <samp class="social_icon">
+                            <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="margin: auto;">
                             <i class="fa fa-linkedin " aria-hidden="true"></i>
+                            </a>
                         </samp>
                         <samp class="social_icon">
+                            <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="margin: auto;">
                             <i class="fa fa-facebook " aria-hidden="true"></i>
+                            </a>
                         </samp>
                         <samp class="social_icon">
+                                <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="margin: auto;">
                             <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                            </a>
                         </samp>
                         <samp class="social_icon">
+                                <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="margin: auto;">
                             <i class="fa fa-twitter " aria-hidden="true"></i>
+                                </a>
                         </samp>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
-                        <p class="fontGraphikRegular">hello@crayond.com</p>
+                        <a href="mailto:hello@crayond.com?Subject=Hello%20again" target="_top" style="color: #000;">
+                            <p class="fontGraphikRegular" style="cursor: pointer;">hello@crayond.com</p>
+                        </a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-6 col-md-4 col-lg-2 col-xl-2 footer_address">
-                            <p class="fontGraphikRegular">+(91) 74483 90100</p>
+                        <a href="https://wa.me/+917448390100" style="color: #000;" target="__blank">
+                            <p class="fontGraphikRegular" style="cursor: pointer;" >+(91) 74483 90100</p>
+                        </a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-3 col-xl-3 footer_address" >
-                            <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
+                            <p class="fontGraphikRegular" style="border: none; margin-top: 19px;margin-bottom: 10px;text-align: left;" > 105, South West Boag Road, T.Nagar Chennai, India</p>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 social_icon_link mobile_social_links"
                         style="display: flex;justify-content: flex-start; display: none;">
                         <samp class="social_icon">
+                           <a href="https://www.linkedin.com/company/crayond/" target="_blank" alt="crayond_linkedin" style="margin: auto;">
                             <i class="fa fa-linkedin " aria-hidden="true"></i>
+                            </a>
                         </samp>
                         <samp class="social_icon">
+                            <a href="https://www.facebook.com/CrayonDigital/" target="_blank" alt="crayond_facebook" style="margin: auto;">
                             <i class="fa fa-facebook " aria-hidden="true"></i>
+                            </a>
                         </samp>
                         <samp class="social_icon">
-                            <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                            <a href="https://www.instagram.com/crayondofficial/" target="_blank" alt="crayond_instagram" style="margin: auto;">
+                                <i class="fa fa-instagram fa-lightbulb-o" aria-hidden="true"></i>
+                            </a>
                         </samp>
                         <samp class="social_icon">
+                            <a href="https://twitter.com/crayondofficial" target="_blank" alt="crayond_twitter" style="margin: auto;">
                             <i class="fa fa-twitter " aria-hidden="true"></i>
+                            </a>
                         </samp>
                     </div>
 
@@ -548,24 +572,29 @@
     }
     var data = { "2012": [
                         {
-                        "date": "AUG 2012",
-                        "dis": "Our quest began over 100 lines of chat. We dreamt big starting from creating a unique brand, strong culture, wonderful people. We even planned our outfits, looked around for space and zeroed in on SP Info City. We envisioned our ambience and had it covered as well all at a budget not leaving out bean bags."
+                             "date": "AUG 2012",
+                             "tagline": "A dream to leap",
+                             "dis": "Our quest began over 100 lines of chat. We dreamt big, starting from creating a unique brand, strong culture & wonderful people. We even planned our outfits! With a budget that did not leave out bean bags, we zeroed in on SP Info City. We had nowhere to go but up."
                         },
                         {
                             "date":"SEP 2012",
-                            "dis":"Reality struck as our heart was full but our pockets were empty. And, we were all about product and sweating on investors. We were so unsure about how to proceed. We bought a cafe moments card to atleast gain some miles for all the coffee."
+                            "tagline": "Coffee instead of couch",
+                            "dis":"Reality struck hard as our hearts were full but pockets empty. Being product-minded, we were sweating on investors. Unsure of how to proceed, we bought a cafe moments card to get more miles on all of our coffees."
                         },
                         {
                             "date":"SEP 17 2012",
-                            "dis":"Where there is a will, there is a way! We decided to bootstrap. We couldn't afford an office so we shared a space with a kind enough friend. Crayon'd started its journey with 3 of us at the helm. The excitement and emotion is hard to explain."
+                            "tagline": "The march starts!",
+                            "dis": "Where there is a will, there is a way. We bootstrapped! We couldn't afford an office but we had kind friend who shared their space with us. Crayon'd started its journey with 3 of us at the helm. The excitement and emotion of those days are still vivid."
                         },
                         {
                             "date":"SEP 2012",
-                            "dis":"Our 1st Client arrived. Thanks to our well-wisher who passed on a reference to us."
+                            "tagline": "First ray of light",
+                            "dis": "Our 1st Client arrived. Thanks to our well-wisher who passed on a reference to us."
                         },
                         {
                             "date":"NOV 2012",
-                            "dis":"We were now 6 and hunted for another shared space. Guess What? We found something pretty. We grew to 9 member team here."
+                            "tagline": "More people aboard",
+                            "dis": "We were now 6 and hunted for another shared space. Guess What? We found something pretty. We grew to 9 member team here."
                         }
                     ],
                     "2013": [
